--- a/demo/react/index.html
+++ b/demo/react/index.html
@@ -21,5 +21,7 @@ padding: 9px 25px;
 </style>
 </head><body>
 <div id="container"></div>
-<script src="../react.bundle-2f83917ec532949105ef98e8015c1061.js" crossOrigin="anonymous" integrity="sha256-C2u8fkgg5AK5nkLzJM1XfeaxsNFHUebUQaai0pa9Law="></script>
+<script src="../react.vendor-0589f9647447a146d422c9cf3cca3f82.js" crossOrigin="anonymous" integrity="sha256-YCwQ4tDroPvbD3fDiX2BFW0wOa7h3Sob4p2DALpvaSU="></script>
+<script src="../react.editor-3b6f90557f25c0b0d0f53f7c2a191820.js" crossOrigin="anonymous" integrity="sha256-HFzFSQ4jChHiw1dPvaKC8UvQz4/WZzMViW8P++jnf8I="></script>
+<script src="../react-f695dca31d31e7c85e3442e5ca88da6d.js" crossOrigin="anonymous" integrity="sha256-+KGRa+Yo//fZDhkPfVUADEoQLEqRzAj50seCrA/lt3Y="></script>
 </body></html>
