--- a/demo/vue/index.html
+++ b/demo/vue/index.html
@@ -52,5 +52,7 @@ Value:
 <pre :style="{borderColor: color}"><code v-html="valueHtml"></code></pre>
 </div>
 </div>
-<script src="../vue.bundle-2e614365610592c16af671e272a3d4ef.js" crossOrigin="anonymous" integrity="sha256-7zvsrXtu690qsL8XEIECO2iv4Wx9mfp6zDgbJtFqytE="></script>
+<script src="../vue.vendor-32b2f2f984a1c5ad62ee738f412a66e2.js" crossOrigin="anonymous" integrity="sha256-D9VPKW6epcjHE52sQWLzAp+eHcwAPuukDP4K+6f5BFs="></script>
+<script src="../vue.editor-ce6869707675775aba7adf0e07a1eff0.js" crossOrigin="anonymous" integrity="sha256-gGXHuJvRhAutHFHTBnjPKTE0FZP4nH8/zDouEdDQU8Q="></script>
+<script src="../vue-b9c8300327ca9d676face16f76c88164.js" crossOrigin="anonymous" integrity="sha256-H7LHL+2wx0gTlEpfAVSIApk6S/IbwRGDtAbPH86zdUA="></script>
 </body></html>
