--- a/demo/angular/index.html
+++ b/demo/angular/index.html
@@ -21,5 +21,7 @@ padding: 9px 25px;
 </style>
 </head><body>
 <app></app>
-<script src="../angular.bundle-3db2c8adf44c6703655a0c0348c02124.js" crossOrigin="anonymous" integrity="sha256-2rhPj7kme2MW96NHJuqg5jJc6Cuge7mMLQjMcaLtOyw="></script>
+<script src="../angular.vendor-473278d7094129bb409fcf5c9e32b0cb.js" crossOrigin="anonymous" integrity="sha256-ZINbygMAmGZLuJEfCR3t99/XSuA56XpS6JZglE3VXmw="></script>
+<script src="../angular.editor-1b4fc3df69b41f172d5f2882ee8413be.js" crossOrigin="anonymous" integrity="sha256-vJvXK3R1qMK14K0Qg7FVHNBd4zgC4wULxRPbqWC6dUU="></script>
+<script src="../angular-bdfa910e529d294b75e973c5b22371ce.js" crossOrigin="anonymous" integrity="sha256-Irwuvgii/Va8XuMmy5gZavy25Egt6KdVLvr1p1YnEqc="></script>
 </body></html>
